Version 5.2.6   unreleased

    * Fix Eclipse 4.5 resource leak warning for streams in FilesystemUtils.copyFile().

Version 5.2.5   13 Jul 2015

    * Bump up to AppEngine v1.9.23 just to stay up-to-date.
    * Convert to Gradle 2 by upgrading to CedarBuild v0.9.1 (tested with Gradle v2.5).

Version 5.2.4   14 Jun 2015

    * Bump up to CedarBuild v0.8.17, just to stay up-to-date.
    * Configure Mercurial line endings in .hgeol and auto-convert files as necessary.

Version 5.2.3   22 Apr 2015

    * Add methods to FilesystemUtils: getCurrentWorkingDir(), getFileSize(), isAbsolutePath()
    * Add new methods in IFilesystemService to match up with FilesystemUtils.
    * Add new dependency on commons-io for cedar-common-utils, for absolute path feature.

Version 5.2.2   17 Apr 2015

    * Create GwtAssertions class in gwttestutils, with method assertRpcsImplementRemoteService().
    * Add new unit test class RpcInterfaceTest to check that RPCs implement the proper interface.

Version 5.2.1   17 Mar 2015

    * Make adjustments for transition from Google Code to BitBucket.

Version 5.2.0   17 Mar 2015

   * Bump up to AppEngine v1.9.18 just to stay up-to-date.
   * Move to Maven Central based on support in CedarBuild v0.8.14.
   * Pull in Objectify 3.1 from repackaged repository in Maven Central.

Version 5.1.0   11 Jan 2015

    * Bump up to GWT 2.7.0, AppEngine v1.9.17a, and CedarBuild v0.8.12.
    * Deprecate the GaeUserService and GaeUserRpc methods that handle federated login.
    * Implement new GaeUserService and GaeUserRpc methods to support Google Accounts logins.

Version 5.0.2   11 Nov 2014

    * Add Assertions.assertListEquals() and Assertions.assertMapEquals().

Version 5.0.1   08 Nov 2014

    * Update the README to be explicit about only supporting GWT 2.7 or better.

Version 5.0.0   08 Nov 2014

    * Change AbstractDropdownList interface to avoid conflicts with new GWT 2.7.x methods.